--- a/src/DL.SCA.Web.AppB/DL.SCA.Web.AppB.csproj
+++ b/src/DL.SCA.Web.AppB/DL.SCA.Web.AppB.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DL.SCA.Security\DL.SCA.Security.csproj" />
+    <ProjectReference Include="..\DL.SCA.Web.Shared\DL.SCA.Web.Shared.csproj" />
   </ItemGroup>
 
 </Project>
