Create the database DL.SCA.Identity to store all identity related tables.

--- a/src/DL.SCA.Web.AppA/appsettings.json
+++ b/src/DL.SCA.Web.AppA/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "AppDbConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=DL.SCA.Web.AppA;Integrated Security=True;MultipleActiveResultSets=False;"
+    "AppDbConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=DL.SCA.Identity;Integrated Security=True;MultipleActiveResultSets=False;"
   }
 }
