--- a/src/DL.SCA.Web.AppB/appsettings.json
+++ b/src/DL.SCA.Web.AppB/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "AppDbConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=DL.SCA.Web.AppB;Integrated Security=True;MultipleActiveResultSets=False;"
+    "AppDbConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=DL.SCA.Identity;Integrated Security=True;MultipleActiveResultSets=False;"
   }
 }
